# sos-backend

./: .envrc.sample  .gitattributes  .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  VERSION  api-server.html  default.nix  docker-compose.dev.yml  docker-compose.run.yml  docker-compose.yml  search-index.js  shell.nix  source-files.js
sos21-api-server/: CHANGELOG.md  Cargo.toml  README.md  build.rs  default.nix
sos21-api-server/schema/: api.yml  package-lock.json  package.json
sos21-api-server/schema/model/: DateTime.yml  DistributedFile.yml  Mime.yml  Null.yml  ProjectQuery.yml
sos21-api-server/src/: app.rs  config.rs  filter.rs  handler.rs  lib.rs  main.rs  server.rs
sos21-api-server/src/app/: authentication.rs
sos21-api-server/src/filter/: authentication.rs  error.rs  handler.rs  login.rs
sos21-api-server/src/handler/: assign_user_role_to_email.rs  file.rs  file_distribution.rs  file_sharing.rs  form.rs  form_answer.rs  health.rs  invite_user.rs  me.rs  meta.rs  model.rs  pending_project.rs  project.rs  signup.rs  user.rs  user_invitation.rs
sos21-database/: Cargo.toml  README.md  default.nix  sqlx-data.json
sos21-database/migrations/: 20210122032913_init.sql  20210302103321_add_project_index.sql  20210302170442_add_cooking_food_outdoor.sql  20210302200024_delete_display_id.sql  20210309032212_structured_project_query.sql  20210311070210_json_form_data.sql  20210311073742_delete_unused_count_project_sequence.sql  20210311165742_add_files.sql  20210320113927_add_file_sharings_and_distributions.sql  20210330101458_pending_project_subowner.sql  20210412123257_user_category.sql  20210420201104_registaration_form.sql  20210425183738_unique_owner_subowner.sql  20210429135555_user_invitation.sql  20210520143144_affiliation_user_category.sql  20210615083430_add_project_query_file_sharing.sql  20210715163345_last_update.sql  20220412141856_delete_affiliation.sql  20220414211708_add-project-category-enum.sql  20220425063347_slack-notification.sql  20220622022603_exceptional_complete_deadline.sql  20230423025208_redefine_project_category.sql
sos21-database/src/: command.rs  lib.rs  model.rs  query.rs
sos21-database/src/command/: delete_file_distribution_files.rs  delete_form_condition_exclude.rs  delete_form_condition_excludes.rs  delete_form_condition_include.rs  delete_form_condition_includes.rs  delete_form_project_query_conjunctions.rs  delete_pending_project.rs  delete_registration_form_project_query_conjunctions.rs  delete_user_invitation.rs  insert_file.rs  insert_file_distribution.rs  insert_file_distribution_files.rs  insert_file_sharing.rs  insert_form.rs  insert_form_answer.rs  insert_form_condition_exclude.rs  insert_form_condition_excludes.rs  insert_form_condition_include.rs  insert_form_condition_includes.rs  insert_form_project_query_conjunctions.rs  insert_pending_project.rs  insert_project.rs  insert_registration_form.rs  insert_registration_form_answer.rs  insert_registration_form_project_query_conjunctions.rs  insert_user.rs  insert_user_invitation.rs  update_file.rs  update_file_distribution.rs  update_file_sharing.rs  update_form.rs  update_form_answer.rs  update_pending_project.rs  update_project.rs  update_registration_form.rs  update_registration_form_answer.rs  update_user.rs  update_user_invitation.rs
sos21-database/src/model/: file.rs  file_distribution.rs  file_sharing.rs  form.rs  form_answer.rs  pending_project.rs  project.rs  registration_form.rs  registration_form_answer.rs  user.rs  user_invitation.rs
sos21-database/src/query/: count_projects.rs  count_registration_form_answers_by_pending_project.rs  count_registration_forms_by_pending_project.rs  find_file.rs  find_file_distribution.rs  find_file_sharing.rs  find_form.rs  find_form_answer.rs  find_form_answer_by_form_and_project.rs  find_pending_project.rs  find_project.rs  find_project_by_display_id.rs  find_project_by_index.rs  find_registration_form.rs  find_registration_form_answer.rs  find_registration_form_answer_by_registration_form_and_pending_project.rs  find_registration_form_answer_by_registration_form_and_project.rs  find_user.rs  find_user_by_email.rs  find_user_invitation.rs  find_user_invitation_by_email.rs  get_next_index.rs  is_healthy.rs  list_file_distributions.rs  list_file_distributions_by_project.rs  list_file_sharings_by_pending_project.rs  list_file_sharings_by_user.rs  list_files_by_user.rs  list_form_answers_by_form.rs  list_forms.rs  list_forms_by_project.rs  (+12 more)
sos21-domain/: Cargo.toml  README.md  default.nix
sos21-domain/context/: Cargo.toml
sos21-domain/model/: Cargo.toml
sos21-domain/src/: context.rs  error.rs  lib.rs  model.rs  test.rs
sos21-domain/test/: Cargo.toml
sos21-gateway/database/: Cargo.toml  README.md  default.nix
sos21-gateway/s3/: Cargo.toml  README.md  default.nix
sos21-gateway/slack/: Cargo.toml
sos21-run-migrations/: Cargo.toml  README.md  default.nix
sos21-run-migrations/src/: main.rs
sos21-use-case/: Cargo.toml  README.md  default.nix
sos21-use-case/src/: accept_project_subowner.rs  answer_form.rs  answer_registration_form.rs  assign_user_role_to_email.rs  check_project_display_id_status.rs  create_file.rs  create_form.rs  create_form_answer.rs  create_project.rs  create_registration_form.rs  delete_user_invitation.rs  distribute_files.rs  error.rs  export_form_answers.rs  export_projects.rs  export_registration_form_answers.rs  export_users.rs  get_distributed_file.rs  get_file.rs  get_file_distribution.rs  get_file_object.rs  get_file_sharing.rs  get_form.rs  get_form_answer.rs  get_form_answer_shared_file.rs  get_form_answer_shared_file_object.rs  get_login_user.rs  get_pending_project.rs  get_pending_project_registration_form.rs  get_pending_project_registration_form_answer.rs  get_project.rs  get_project_by_code.rs  get_project_by_display_id.rs  get_project_creation_availability.rs  get_project_form.rs  get_project_form_answer.rs  get_project_form_answer_shared_file.rs  get_project_form_answer_shared_file_object.rs  get_project_registration_form.rs  get_project_registration_form_answer.rs  (+51 more)
(+11688 files in other folders)
