[package]
name = "sos21-api-server"
version = "0.5.3-beta"
authors = ["coord_e <me@coord-e.com>", "azarashi2931 <az@rashi.email>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
async-trait = "0.1.42"
thiserror = "1"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
warp = { version = "0.3.1", default-features = false }
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
jsonwebtoken = "7"
mime = "0.3"
bytes = "1"
mpart-async = "0.5"
rusoto_s3 = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"] }
rusoto_credential = "0.47"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
structopt = "0.3"
hex = { version = "0.4", features = ["serde"] }
macro_rules_attribute = "0.0.2"
uritemplate-next = "0.2"
percent-encoding = "2.1"
sos21-domain = { path = "../sos21-domain" }
sos21-database = { path = "../sos21-database" }
sos21-gateway-database = { path = "../sos21-gateway/database" }
sos21-gateway-s3 = { path = "../sos21-gateway/s3" }
sos21-use-case = { path = "../sos21-use-case" }

[build-dependencies]
vergen = { version = "4", default-features = false, features = ["build", "cargo", "git"] }
