[package]
name = "sos21-database"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"
readme = "README.md"
documentation = "https://sohosai.github.io/sos21-backend/sos21_database/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
uuid = "0.8"
futures = "0.3"
bitflags = "1"
bincode = "1"

[dependencies.sqlx]
version = "0.5"
features = ["macros", "postgres", "chrono", "uuid", "bit-vec", "offline", "runtime-tokio-rustls"]
