[package]
name = "sos21-database"
version = "0.5.0-beta"
authors = ["coord_e <me@coord-e.com>", "azarashi2931 <az@rashi.email>"]
edition = "2018"
readme = "README.md"
documentation = "https://sohosai.github.io/sos21-backend/sos21_database/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
chrono = "0.4"
uuid = "0.8"
futures = "0.3"
bitflags = "1"
serde_json = "1"

[dependencies.sqlx]
version = "0.5"
features = [
  "bit-vec",
  "chrono",
  "json",
  "macros",
  "offline",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
]
