[package]
name = "sos21-domain"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
bitflags = "1"
uuid = { version = "0.8", features = ["serde"] }
typenum = "1"
async-trait = "0.1.42"
anyhow = "1"
serde = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
maplit = "1"
sos21-domain-test = { path = "test" }
