[package]
name = "sos21-domain"
version = "0.6.1"
authors = ["coord_e <me@coord-e.com>", "azarashi2931 <az@rashi.email>"]
edition = "2018"
readme = "README.md"
documentation = "https://sohosai.github.io/sos21-backend/sos21_domain/"
license = "MIT OR Apache-2.0"

[features]
# TODO: get rid of this confusing flag (related: rust-lang/rust#79381)
test = ["tokio", "maplit", "once_cell", "rand"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
enumflags2 = "0.7"
paste = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
typenum = "1"
async-trait = "0.1.42"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
mime = "0.3"
futures = "0.3"
blake3 = "0.3"
unicode-segmentation = "1.7"
num-rational = "0.4"
auto_enums = "0.7"

# these optional dependencies are used by `test` feature (which is enabled for the use from other crates)
tokio = { version = "1", optional = true, features = ["macros", "rt-multi-thread"] }
maplit = { version = "1", optional = true }
once_cell = { version = "1", optional = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
maplit = "1"
once_cell = "1"
rand = "0.8"
