[package]
name = "sos21-use-case"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
csv = "1"
tracing = "0.1"
tracing-futures = "0.2"
sos21-domain = { path = "../sos21-domain" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sos21-domain-test = { path = "../sos21-domain/test" }
