[package]
name = "sos21-use-case"
version = "0.6.1-beta"
authors = ["coord_e <me@coord-e.com>", "azarashi2931 <az@rashi.email>"]
edition = "2018"
readme = "README.md"
documentation = "https://sohosai.github.io/sos21-backend/sos21_use_case/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bytes = "1"
chrono = "0.4"
csv = "1"
futures = "0.3"
mime = "0.3"
tracing = "0.1"
tracing-futures = "0.2"
uuid = { version = "0.8", features = ["v4"] }
sos21-domain = { path = "../sos21-domain" }
sos21-gateway-slack = { path = "../sos21-gateway/slack" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sos21-domain = { path = "../sos21-domain", features = ["test"] }
