[package]
name = "sos21-domain-model"
version = "0.1.0"
authors = ["coord.e <me@coord-e.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
bitflags = "1"
uuid = { version = "0.8", features = ["serde"] }
typenum = "1"

[dev-dependencies]
sos21-domain-test = { path = "../test" }
