[package]
name = "sos21-gateway-database"
version = "0.5.2"
authors = ["coord_e <me@coord-e.com>", "azarashi2931 <az@rashi.email>"]
edition = "2018"
readme = "README.md"
documentation = "https://sohosai.github.io/sos21-backend/sos21_gateway_database/"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
futures = "0.3"
async-trait = "0.1.42"
ref-cast = "1"
serde_json = "1"
uuid = "0.8"
sos21-database = { path = "../../sos21-database" }
sos21-domain = { path = "../../sos21-domain" }
sqlx = { version = "0.5", features = ["postgres"] }
