[package]
name = "sos21-gateway-slack"
version = "0.7.0"
authors = ["yuseiito <me@yuseiito.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
url = "2.2.2"
slack-hook = "0.8.0"
sos21-domain = { path = "../../sos21-domain" }

[build-dependencies]
syn = "1"
